# cmake

./: CMakeLists.txt  main.cpp
Blah/: blah.cpp
Blah/include/: blah.h
